--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #form {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 100px;
 }
 
 #form > label {
@@ -13,11 +14,59 @@
     flex-direction: column;
 }
 
+#col2 {
+    columns: 2;
+}
+
 .task-div {
-    min-height: 100px;
-    max-height: 100px;
-    min-width: 100px;
-    max-width: 100px;
+    display: flex;
+    min-height: 400px;
+    max-height: 400px;
+    min-width: 400px;
+    max-width: 400px;
+    overflow: auto;
     border: 1px solid black;
     border-radius: 12px;
+}
+
+#task-container-queue {
+    min-height: 200px;
+    max-height: 200px;
+}
+
+#task-messages {
+    border: 1px solid black;
+    width: 100%;
+    border-radius: 12px;
+    min-width: 400px;
+    max-width: 400px;
+}
+
+#app {
+    display: flex;
+    gap: 25px;
+
+    justify-content: space-between;
+}
+
+.outer-timer {
+    width: 100%;
+    height: 10px;
+    background-color: gray;
+    overflow: hidden;
+    border-radius: 8px;
+}
+.inner-timer {
+    width: 0%;
+    height: 10px;
+    background-color: rgb(95, 169, 255);
+    transition: all ease-in-out;
+}
+
+#task-messages {
+    display: flex;
+    font-weight: bold;
+    color: green;
+    justify-content: center;
+    align-items: center;
 }
